Header list: added bg and fixed spacing

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
+    min-width: 510px;
 }
 
 .header {
@@ -50,10 +51,16 @@ body {
 ul {
     list-style: none;
     display: flex;
-    align-items: center;
-    padding: 0;
-    gap: 24px;
+    padding-left: 0;
+    padding-right: 20px;
     font-size: 18px;
+}
+
+li {
+    background-color: #2c1400;
+    padding: 15px 20px;
+    flex-shrink: 0;
+    margin: 2px;
 }
 
 a {
@@ -116,7 +123,6 @@ a {
 }
 
 .main {
-    background-color: grey;
     max-height: 250px;
     max-width: 550px;
     flex-shrink: 1;
